@@ -2527,7 +2527,7 @@ void KPrCanvas::savePicture()
     stickyPage()->savePicture(m_view);
 }
 
-void KPrCanvas::setFont(const QFont &font, bool _subscript, bool _superscript,  const QColor &col, const QColor &backGroundColor, const QColor & underlineColor, KoTextFormat::UnderlineLineType underlineType, KoTextFormat::UnderlineLineStyle underlineStyle, KoTextFormat::StrikeOutLineType strikeOutType , KoTextFormat::StrikeOutLineStyle strikeOutStyle, KoTextFormat::AttributeStyle _att, bool _shadowText, double _relativeSize, int _offsetFromBaseLine, bool _wordByWord, int flags)
+void KPrCanvas::setFont(const QFont &font, bool _subscript, bool _superscript,  const QColor &col, const QColor &backGroundColor, const QColor & underlineColor, KoTextFormat::UnderlineLineType underlineType, KoTextFormat::UnderlineLineStyle underlineStyle, KoTextFormat::StrikeOutLineType strikeOutType , KoTextFormat::StrikeOutLineStyle strikeOutStyle, KoTextFormat::AttributeStyle _att, bool _shadowText, double _relativeSize, int _offsetFromBaseLine, bool _wordByWord, const QString &_lang, int flags)
 {
     QPtrList<KoTextFormatInterface> lst = applicableTextInterfaces();
     if ( lst.isEmpty() ) return;
@@ -2549,6 +2549,7 @@ void KPrCanvas::setFont(const QFont &font, bool _subscript, bool _superscript,  
                                                      _relativeSize,
                                                      _offsetFromBaseLine,
                                                      _wordByWord,
+                                                     _lang,
                                                      flags);
 
         if (cmd)
