@@ -294,3 +294,4 @@ Changes after KWord-1.2
 - Add support for convert text to textbox
 - Now we can add/remove word in personal dictionary
 - Now we can change backup path
+- Now kotextformat support language
