@@ -138,3 +138,5 @@ Changes after KPresenter 1.2
 - Now we can modify "ignore list"
 - Now we can modify personal dictonary
 - Now we can change backup path
+- Now kotextformat support language
+
